--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "webpack-dev-server": "3.10.3"
   },
   "dependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
     "@reduxjs/toolkit": "^1.5.1",
+    "@types/jest": "^26.0.23",
     "axios": "^0.21.1",
+    "babel-jest": "^27.0.2",
+    "jest": "^27.0.3",
     "moment": "^2.29.1",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
