--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@reduxjs/toolkit": "^1.5.1",
     "@types/jest": "^26.0.23",
     "axios": "^0.21.1",
+    "axios-mock-adapter": "^1.19.0",
     "babel-jest": "^27.0.2",
     "jest": "^27.0.3",
     "moment": "^2.29.1",
